[gd_scene load_steps=6 format=3 uid="uid://b6o2a7nbc11hm"]

[ext_resource type="Script" path="res://Scenes/Objects/flag.gd" id="1_n0j0s"]
[ext_resource type="Texture2D" uid="uid://wrfhx37o51vk" path="res://Assets/Decorations/Flag(I).png" id="2_h102s"]

[sub_resource type="Animation" id="Animation_pab4i"]
resource_name = "Klaim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -70), Vector2(20, -90), Vector2(0, -70)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.436332, 0.0]
}

[sub_resource type="Animation" id="Animation_wca8g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -70)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kd4oi"]
_data = {
"Klaim": SubResource("Animation_pab4i"),
"RESET": SubResource("Animation_wca8g")
}

[node name="Flag" type="StaticBody2D"]
collision_layer = 17
script = ExtResource("1_n0j0s")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-10, 0, 0, 10, 10, 0, 0, -10)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-150, 0, 0, 90, 150, 0, 0, -90)

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -70)
texture = ExtResource("2_h102s")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -20.0
offset_top = -160.0
offset_right = 20.0
offset_bottom = -120.0

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 41.0
text = "A"

[node name="Button" type="Button" parent="."]
visible = false
offset_left = -30.0
offset_top = -70.0
offset_right = 30.0
offset_bottom = -39.0
text = "KLAIM"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kd4oi")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
